build: modified jpackage